--- a/style.css
+++ b/style.css
@@ -1162,11 +1162,11 @@ h2 {
     .rollingimages-pcconteiner {
         position: absolute;
         display: flex;
-        justify-content: center;
+        justify-content: right;
         align-items: center;
         top: 15vh;
         left: 0;
-        height: 65vh;
+        height: 50vh;
         width: 100%;
     }
 
@@ -1175,64 +1175,65 @@ h2 {
         width: 100px;
         height: 100px;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
     }
 
     .rollingimages h5 {
         transform: rotate(90deg);
-        font-size: 4rem; 
+        font-size: 5rem; 
     }
 
-    .rollingimages svg {
-        width: 60px;
-        height: 60px;
+    svg {
+        position: absolute;
+        width: 50px;
+        height: 50px;
         fill: var(--orange);
     }
 
-    .rollingimages svg:nth-child(1) {
+    .rollingimages svg:nth-child(2) {
         animation: orbit1 10s linear infinite;
     }
     
-    .rollingimages svg:nth-child(2) {
+    .rollingimages svg:nth-child(3) {
         animation: orbit2 10s linear infinite;
     }
     
-    .rollingimages svg:nth-child(3) {
+    .rollingimages svg:nth-child(4) {
         animation: orbit3 10s linear infinite;
     }
     
-    .rollingimages svg:nth-child(4) {
+    .rollingimages svg:nth-child(5) {
         animation: orbit4 10s linear infinite;
     }
     
-    .rollingimages svg:nth-child(5) {
+    .rollingimages svg:nth-child(6) {
         animation: orbit5 10s linear infinite;
     }
     
     @keyframes orbit1 {
-        0%   { transform: rotate(0deg) translate(0, -0px) }
-        100% { transform: rotate(360deg) translate(0, -0px)  }
+        0%   { transform: rotate(0deg) translate(0, -80px) }
+        100% { transform: rotate(360deg) translate(0, -80px)  }
     }
     
     @keyframes orbit2 {
-        0%   { transform: rotate(72deg) translate(0, -0px)  }
-        100% { transform: rotate(432deg) translate(0, -0px)  }
+        0%   { transform: rotate(72deg) translate(0, -80px)  }
+        100% { transform: rotate(432deg) translate(0, -80px)  }
     }
     
     @keyframes orbit3 {
-        0%   { transform: rotate(144deg) translate(0, -0px)  }
-        100% { transform: rotate(504deg) translate(0, -0px)  }
+        0%   { transform: rotate(144deg) translate(0, -80px)  }
+        100% { transform: rotate(504deg) translate(0, -80px)  }
     }
     
     @keyframes orbit4 {
-        0%   { transform: rotate(216deg) translate(0, -0px)  }
-        100% { transform: rotate(576deg) translate(0, -0px)  }
+        0%   { transform: rotate(216deg) translate(0, -80px)  }
+        100% { transform: rotate(576deg) translate(0, -80px)  }
     }
     
     @keyframes orbit5 {
-        0%   { transform: rotate(288deg) translate(0, -0px)  }
-        100% { transform: rotate(648deg) translate(0, -0px) }
+        0%   { transform: rotate(288deg) translate(0, -80px)  }
+        100% { transform: rotate(648deg) translate(0, -80px) }
     }
 
 
