--- a/style/footer.css
+++ b/style/footer.css
@@ -1,12 +1,15 @@
-
+* {
+    box-sizing: border-box;
+}
 footer {
     width: 100%;
-    height: 10vh;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     overflow-x: hidden;
+    padding-bottom: 2vh;
 }
 
 footer #footertext {
@@ -61,7 +64,7 @@ footer #footertext {
 
 @media (min-width: 320px) and (max-width: 765px) {
     footer #footertext {
-        font-size: clamp(1rem, 0.4093rem + 1.2355vw, 1.2rem);
+        font-size: clamp(1.3rem, 1.1562rem + 0.7191vw, 1.5rem);
     }
 
     .fa {
@@ -70,9 +73,36 @@ footer #footertext {
 }
 
 @media (max-width: 1024px) {
-    .fa svg {
+    .fa {
         width: 30px;
         height: 30px;
         fill: var(--text);
     }
+
+    .fa svg {
+        width: 30px;
+        height: 30px;
+    }
+    footer #footertext {
+        width: 100%;
+    }
+
+
+    footer {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .icons {
+        width: 100%;
+        height: auto;
+    }
+    
+
+    .icons-cont {
+        justify-content: center;
+        gap: 50px;
+  
+    }
+    
 }
