--- a/style/navbar.css
+++ b/style/navbar.css
@@ -5,13 +5,13 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     pointer-events: none;
+    overflow-x: hidden;
     z-index: 1000;
 }
 
 nav {
-    background-color: var(--navbar);
     width: 100%;
     height: 15vh;
     display: flex;
@@ -42,7 +42,8 @@ nav {
     background: none;
     border: none;
     font-size: 4rem;
-  
+    width: none;
+    cursor: pointer;
 }
 
 .navopener {
@@ -100,58 +101,6 @@ nav {
 
 @media (min-width: 1024px) {
 
-.fixednav {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 1000;
-}
-
-nav {
-    background-color: var(--navbar);
-    width: 100%;
-    height: 15vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: auto;   
-
-    
-}
-.nav-conteiner {
-    width: 90%;
-    height: 90%;
-    display: flex;
-    align-items: center;
-    overflow-x: auto;
-    pointer-events: auto;
-}
-
-#contnav-logo {
-    width: 100%;
-    display: flex;
-    justify-content: start;
-}
-
-#nav-logo {
-    height: 60px;
-    width: 60px;
-    
-}
-
-.nav-opener {
-    display: flex;
-    justify-content: end;
-    color: var(--picorange);
-    background: none;
-    border: none;
-    font-size: 4rem;
-    width: 100%;
-    
-}
 
 .navopener {
     position: absolute;
@@ -223,60 +172,6 @@ nav {
 
 /*------------------Tablet----------------*/
 @media (min-width: 765px) and (max-width: 1024px) {
-
-
-.fixednav {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 1000;
-}
-
-nav {
-    background-color: var(--navbar);
-    width: 100%;
-    height: 15vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: auto;   
-
-    
-}
-.nav-conteiner {
-    width: 90%;
-    height: 90%;
-    display: flex;
-    align-items: center;
-    overflow-x: auto;
-    pointer-events: auto;
-}
-
-#contnav-logo {
-    width: 100%;
-    display: flex;
-    justify-content: start;
-}
-
-#nav-logo {
-    height: 60px;
-    width: 60px;
-    
-}
-
-.nav-opener {
-    display: flex;
-    justify-content: end;
-    color: var(--picorange);
-    background: none;
-    border: none;
-    font-size: 4rem;
-    width: 100%;
-    
-}
 
 .navopener {
     position: absolute;
