--- a/style.css
+++ b/style.css
@@ -38,10 +38,11 @@ Reserved Font Names: "Play", "Playtype", "Playtype Sans"
 
 body {
     background: var(--darkblue);
-    overflow: visible;
+    overflow-x: hidden;
     scroll-snap-type: y mandatory;
     font-family: Play;
 }
+
 
 
 .hidden {
@@ -102,6 +103,8 @@ body {
     flex-direction: row;
 }
 
+
+
 .h1-conteiner {
     justify-content: left;
     align-items: left;
@@ -147,6 +150,8 @@ h1 {
     transform-origin: 0 0;
     fill: var(--orange);
 }
+
+
 
 .rollingimages .roll:nth-child(1) {
     transform: rotate(0deg) translate(0, -150px) rotate(0deg);
@@ -275,7 +280,9 @@ h5 {
 }
 
 .firstcontent {
-    background-color: var(--darkblue);
+    background: 
+    repeating-linear-gradient(90deg, #0e1f36 0px, #0e1f36 1px, transparent 2px, transparent 8px),
+    repeating-linear-gradient(0deg, #0e1f36 0px, #0e1f36 1px, transparent 2px, transparent 8px);
     display: flex;
     justify-content: top;
     align-items: center;
@@ -455,6 +462,9 @@ h2 {
 /*------------------HIREME----------------*/
 
 .hireme {
+    background: 
+    repeating-linear-gradient(90deg, #0e1f36 0px, #0e1f36 1px, transparent 2px, transparent 8px),
+    repeating-linear-gradient(0deg, #0e1f36 0px, #0e1f36 1px, transparent 2px, transparent 8px);
     width: 100%;
     height: auto;
     display: flex;
@@ -475,7 +485,7 @@ h2 {
 
 
 /*------------------PC----------------*/
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
 
 /*-------------------------MAIN-------------------------*/
 
@@ -512,7 +522,7 @@ h2 {
     flex-direction: column;
     gap: 10px;
     z-index: 2;
-    width: 40%;
+    width: 50%;
     padding-left: 10%;
 }
 
@@ -579,7 +589,6 @@ h1 {
 
 
 .firstcontent {
-    background-color: var(--darkblue);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -734,7 +743,9 @@ h2 {
     .buttonblue {
         font-size: clamp(0.5rem, 0.0333rem + 0.7292vw, 1.2rem);
     }
-    
+    h5 {
+        font-size: clamp(4rem, 3.2rem + 1.25vw, 5.2rem);
+    }
 }
 
 
@@ -744,84 +755,7 @@ h2 {
 
 
 /*------------------Tablet----------------*/
-@media (min-width: 765px) and (max-width: 1024px) {
-
-
-/*-------------------------MAIN-------------------------*/
-
-
-
-.main {
-    margin-top: 15vh;
-    padding-bottom: 5vh;
-    gap: 20px;
-    display: flex;
-    justify-content: top;
-    align-items: center;
-    flex-direction: column; 
-
-    overflow: hidden;   
-    width: 100%;
-
-    
-}
-
-.main-mobile-cont {
-    position: inherit;
-    width: 100%;
-    height: 80vh;
-    display: flex;
-    justify-content: top;
-    align-items: center;
-    flex-direction: row;
-    padding-top: 5vh;
-}
-
-.main-text {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    z-index: 2;
-    width: 40%;
-    padding-left: 10%;
-}
-
-
-.h1-conteiner {
-    justify-content: left;
-    align-items: left;
-    display: flex;
-    flex-direction: row;
-    gap: 25px;
-    
-}
-
-h1 {
-    color: var(--orange);
-    font-family: PlayBold;
-    font-size: 2.5rem;
-    text-align: left;
-    display: flex;
-    flex-direction: row;
-
-}
-
-.h1-conteiner h1 span {
-    transform-origin: 0 0;
-    transform: rotate(0deg);  
-}
-
-.main h2 {
-    position: absolute;
-    top: 80%;
-    left: 0%;
-    transform: translate(50%, -50%);
-    width: 100%;
-}
-
-.firstinfo p {
-    width: 100%;
-}
+@media (min-width: 768px) and (max-width: 1024px) {
 
 
 /*-------------------------CONTENT-------------------------*/
@@ -940,7 +874,7 @@ h2 {
 
 /* responzivita textu */
 
-@media (min-width: 765px) and (max-width: 1024px) {  
+@media (min-width: 768px) and (max-width: 1024px) {  
     .nav-item {
         font-size: clamp(1.5rem, 0.0232rem + 3.0888vw, 2rem);
     }
@@ -984,7 +918,15 @@ h2 {
     .buttonblue {
         font-size: clamp(0.8rem, 0.2093rem + 1.2355vw, 1rem);
     }
-    
+    h5 {
+        font-size: clamp(3rem, 0rem + 6.25vw, 4rem);
+    }
+    .rollingimages svg {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        fill: var(--orange);
+    }
 }    
 
 
@@ -1042,7 +984,7 @@ h2 {
     }
 }
 
-@media (min-width: 580px) and (max-width: 765px) {
+@media (min-width: 580px) and (max-width: 768px) {
 
     .webs {
         background-color: var(--lessdarkblue);
@@ -1070,35 +1012,10 @@ h2 {
 }
 
 
-@media (min-width: 320px) and (max-width: 765px) {
+@media (min-width: 320px) and (max-width: 768px) {
 
 
-    .main {
-        margin-top: 15vh;
-        padding-bottom: 5vh;
-        gap: 20px;
-        height: auto;
-        display: flex;
-        justify-content: top;
-        align-items: center;
-        flex-direction: column; 
-    
-        overflow: hidden;   
-        width: 100%;
-    
-        
-    }
-    
-    .main-mobile-cont {
-        position: relative;
-        width: 90%;
-        height: 80vh;
-        display: flex;
-        justify-content: top;
-        align-items: flex-start;
-        flex-direction: column;
-        padding-top: 5vh;
-    }
+
     
 
 
@@ -1158,7 +1075,7 @@ h2 {
     
 }
 
-@media (max-width: 765px) {
+@media (max-width: 425px) {
     .rollingimages-pcconteiner {
         position: absolute;
         display: flex;
@@ -1184,7 +1101,7 @@ h2 {
         font-size: 5rem; 
     }
 
-    svg {
+    .rollingimages svg {
         position: absolute;
         width: 50px;
         height: 50px;
@@ -1210,31 +1127,178 @@ h2 {
     .rollingimages svg:nth-child(6) {
         animation: orbit5 10s linear infinite;
     }
-    
+
     @keyframes orbit1 {
-        0%   { transform: rotate(0deg) translate(0, -80px) }
-        100% { transform: rotate(360deg) translate(0, -80px)  }
+        0%   { transform: rotate(0deg) translate(0, -100px) }
+        100% { transform: rotate(360deg) translate(0, -100px)  }
     }
     
     @keyframes orbit2 {
-        0%   { transform: rotate(72deg) translate(0, -80px)  }
-        100% { transform: rotate(432deg) translate(0, -80px)  }
+        0%   { transform: rotate(72deg) translate(0, -100px)  }
+        100% { transform: rotate(432deg) translate(0, -100px)  }
     }
     
     @keyframes orbit3 {
-        0%   { transform: rotate(144deg) translate(0, -80px)  }
-        100% { transform: rotate(504deg) translate(0, -80px)  }
+        0%   { transform: rotate(144deg) translate(0, -100px)  }
+        100% { transform: rotate(504deg) translate(0, -100px)  }
     }
     
     @keyframes orbit4 {
-        0%   { transform: rotate(216deg) translate(0, -80px)  }
-        100% { transform: rotate(576deg) translate(0, -80px)  }
+        0%   { transform: rotate(216deg) translate(0, -100px)  }
+        100% { transform: rotate(576deg) translate(0, -100px)  }
     }
     
     @keyframes orbit5 {
-        0%   { transform: rotate(288deg) translate(0, -80px)  }
-        100% { transform: rotate(648deg) translate(0, -80px) }
+        0%   { transform: rotate(288deg) translate(0, -100px)  }
+        100% { transform: rotate(648deg) translate(0, -100px) }
+    }
+
+}
+
+@media (min-width: 425px) and (max-width: 768px) {
+    .rollingimages-pcconteiner {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 15vh;
+        left: 20vh;
+        height: 50vh;
+        width: 100%;
+    }
+
+    .rollingimages {
+        position: relative;
+        width: 100px;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .rollingimages h5 {
+        transform: rotate(90deg);
+        font-size: 5rem; 
+    }
+
+    .rollingimages svg {
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        fill: var(--orange);
+    }
+
+    .rollingimages svg:nth-child(2) {
+        animation: orbit1 10s linear infinite;
+    }
+    
+    .rollingimages svg:nth-child(3) {
+        animation: orbit2 10s linear infinite;
+    }
+    
+    .rollingimages svg:nth-child(4) {
+        animation: orbit3 10s linear infinite;
+    }
+    
+    .rollingimages svg:nth-child(5) {
+        animation: orbit4 10s linear infinite;
+    }
+    
+    .rollingimages svg:nth-child(6) {
+        animation: orbit5 10s linear infinite;
+    }
+
+    @keyframes orbit1 {
+        0%   { transform: rotate(0deg) translate(0, -100px) }
+        100% { transform: rotate(360deg) translate(0, -100px)  }
+    }
+    
+    @keyframes orbit2 {
+        0%   { transform: rotate(72deg) translate(0, -100px)  }
+        100% { transform: rotate(432deg) translate(0, -100px)  }
+    }
+    
+    @keyframes orbit3 {
+        0%   { transform: rotate(144deg) translate(0, -100px)  }
+        100% { transform: rotate(504deg) translate(0, -100px)  }
+    }
+    
+    @keyframes orbit4 {
+        0%   { transform: rotate(216deg) translate(0, -100px)  }
+        100% { transform: rotate(576deg) translate(0, -100px)  }
+    }
+    
+    @keyframes orbit5 {
+        0%   { transform: rotate(288deg) translate(0, -100px)  }
+        100% { transform: rotate(648deg) translate(0, -100px) }
+    }
+
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .rollingimages svg {
+        width: 50px;
+        height: 50px;
+        fill: var(--orange);
     }
 
 
+    @keyframes orbit1 {
+        0%   { transform: rotate(0deg) translate(0, -60px) }
+        100% { transform: rotate(360deg) translate(0, -60px)  }
+    }
+    
+    @keyframes orbit2 {
+        0%   { transform: rotate(72deg) translate(0, -60px)  }
+        100% { transform: rotate(432deg) translate(0, -60px)  }
+    }
+    
+    @keyframes orbit3 {
+        0%   { transform: rotate(144deg) translate(0, -60px)  }
+        100% { transform: rotate(504deg) translate(0, -60px)  }
+    }
+    
+    @keyframes orbit4 {
+        0%   { transform: rotate(216deg) translate(0, -60px)  }
+        100% { transform: rotate(576deg) translate(0, -60px)  }
+    }
+    
+    @keyframes orbit5 {
+        0%   { transform: rotate(288deg) translate(0, -60px)  }
+        100% { transform: rotate(648deg) translate(0, -60px) }
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+    .rollingimages svg {
+        width: 70px;
+        height: 70px;
+        fill: var(--orange);
+    }
+
+
+    @keyframes orbit1 {
+        0%   { transform: rotate(0deg) translate(0, -100px) }
+        100% { transform: rotate(360deg) translate(0, -100px)  }
+    }
+    
+    @keyframes orbit2 {
+        0%   { transform: rotate(72deg) translate(0, -100px)  }
+        100% { transform: rotate(432deg) translate(0, -100px)  }
+    }
+    
+    @keyframes orbit3 {
+        0%   { transform: rotate(144deg) translate(0, -100px)  }
+        100% { transform: rotate(504deg) translate(0, -100px)  }
+    }
+    
+    @keyframes orbit4 {
+        0%   { transform: rotate(216deg) translate(0, -100px)  }
+        100% { transform: rotate(576deg) translate(0, -100px)  }
+    }
+    
+    @keyframes orbit5 {
+        0%   { transform: rotate(288deg) translate(0, -100px)  }
+        100% { transform: rotate(648deg) translate(0, -100px) }
+    }
 }
