--- a/style.css
+++ b/style.css
@@ -1097,3 +1097,9 @@ h1 {
         100% { transform: rotate(648deg) translate(0, -100px) }
     }
 }
+@media (max-height: 500px) {
+    
+.main-mobile-cont {
+    height: auto;
+}
+}
